@@ -25,7 +25,8 @@ def alignReads(reverse_reads,
                twopassMode,
                min_length,
                include_non_mapped,
-               star_genome_loading):
+               star_genome_loading,
+               star_sort_mem_limit):
     """
     This function will perform a sequence alignment using STAR.
     Mapped and unmapped reads are written to the paths given as
@@ -48,6 +49,7 @@ def alignReads(reverse_reads,
     :param min_length: the min allowed read length (mapped bases)
     :param include_non_mapped: True to include un-aligned reads in the output
     :param star_genome_loading: The type of genome sharing for STAR
+    :param star_sort_mem_limit: The BAM sort memory limit for STAR
     :type reverse_reads: str
     :type ref_map: str
     :type outputFile: str
@@ -64,6 +66,7 @@ def alignReads(reverse_reads,
     :type min_length: str
     :type include_non_mapped: bool
     :type star_genome_loading: str
+    :type star_sort_mem_limit: int
     :raises: RuntimeError,ValueError,OSError,CalledProcessError
     """
     logger = logging.getLogger("STPipeline")
@@ -110,6 +113,7 @@ def alignReads(reverse_reads,
              "--readMatesLengthsIn", "NotEqual",
              "--outFilterMismatchNoverLmax", 0.1, ## (0.3 default)
              "--genomeLoad", star_genome_loading,
+             "--limitBAMsortRAM", star_sort_mem_limit,
              "--readFilesType", "SAM","SE", # Input in BAM format
              "--readFilesCommand", "samtools", "view", "-h"] 
     
